--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-       <title>RPS 😁😎</title> 
+       <title>RPS - 😁😎</title> 
        <link rel="stylesheet" href="bootstrap.min.css"/>
 
         <script>
